# FastAPI-app-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  logging.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
tests/api/newman/: collection.json
